# Library

StringPool/: CMakeLists.txt  README.md
StringPool/benchmark/: bench_main.cpp  bench_utils.hpp
StringPool/include/: string_pool.hpp
StringPool/tests/: test_correctness.cpp  test_memory.cpp
